# tiny-llm

./: .gitignore  dataset.py  k_model.py  model_sample.py  pyproject.toml  sft.py  train_k_model.py  train_tokenizer.py
dataset/: .gitattributes  .msc  README.md
qwen/: README_TRAINING.md  ds_config_zero2.json  ds_config_zero3.json  ds_config_zero3_offload.json  pretrain.py  qwen.py  qwen_code_dbg.ipynb  sft.py  train_deepspeed.sh  train_example.sh
tokenizer_k/: tokenizer.json
