[project]
name = "tiny-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "loguru",
    "modelscope>=1.33.0",
    "numpy>=2.4.0",
    "swanlab>=0.7.6",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
